devops/specs/ui-parts/ui-parts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-parts
  namespace: ui
  labels:
    app: ui-parts
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: ui-parts
