devops/specs/ui-parts/ui-parts-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-parts
  namespace: ui
spec:
  hosts:
    - 'ui-parts.ui.atls.tech'
  gateways:
    - ui-parts
  http:
    - route:
        - destination:
            host: ui-parts
            port:
              number: 80
